<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/img_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_auth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/txt_author_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_author"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_auth_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/txt_author_user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/img_author"
        app:layout_constraintTop_toBottomOf="@+id/txt_auth_name" />

    <TextView
        android:id="@+id/txt_auth_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/txt_author_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/img_author"
        app:layout_constraintTop_toBottomOf="@+id/txt_auth_user_name" />
</androidx.constraintlayout.widget.ConstraintLayout>