<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/img_post"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:scaleType="fitXY"
        android:padding="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/lin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/img_post"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/img_post"
        app:layout_constraintTop_toBottomOf="@+id/lin_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/img_post"
        app:layout_constraintTop_toBottomOf="@+id/lin_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>